TestCases/Errors/Haversine/observations/sst/sum_10_obs.spm
obs r4-c13 0.00285714285714286
obs r5-c13 0.001
obs r5-c14 0.000666666666666667
obs r6-c14 0.001
obs r7-c16 0.0231578947368421
obs r7-c17 0.0202894736842105
obs r8-c17 0.0184210526315789
obs r9-c17 0.00210526315789474
obs r8-c18 0.00678365072224721
obs r9-c18 0.00941259443024526
obs r9-c19 0.00792982456140351
error_value r4-c13 0.2
error_value r5-c13 0.2
error_value r5-c14 0.2
error_value r6-c14 0.2
error_value r7-c16 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r9-c17 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r9-c19 0.2
